# django-dev-insights

./: .flake8  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
dev_insights/: __init__.py  config.py  formatters.py  middleware.py  panel.html  sql_trace.py  store.py  template_trace.py  trace.py  urls.py  views.py
dev_insights/collectors/: connection.py  db.py  template.py
resources/: django-dev-insights-roadmap-full.md  django-dev-insights-roadmap.md
tests/: test_collectors.py  test_formatters_and_config.py  test_middleware.py  test_panel.py  test_sql_trace.py  test_template_collector.py  test_trace.py
