[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dev-insights"
version = "0.3.0"
description = "Real-time performance insights for Django development."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "José Torquato", email = "jltorquato12@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=3.2",
    "colorama>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/josetorquato/django-dev-insights"
Repository = "https://github.com/josetorquato/django-dev-insights"
Changelog = "https://github.com/josetorquato/django-dev-insights/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["tests*", "test_project*", "resources*"]

[tool.setuptools.package-data]
dev_insights = ["*.html"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
